# napi-rs-benchmark

./: .gitignore  package-lock.json  package.json
@napi/benchmark/: Cargo.toml  index.d.ts  index.js  package.json
@napi/benchmark/npm/android-arm-eabi/: README.md  package.json
@napi/benchmark/npm/android-arm64/: README.md  package.json
@napi/benchmark/npm/darwin-arm64/: README.md  package.json
@napi/benchmark/npm/darwin-universal/: README.md  package.json
@napi/benchmark/npm/darwin-x64/: README.md  package.json
@napi/benchmark/npm/freebsd-x64/: README.md  package.json
@napi/benchmark/npm/linux-arm-gnueabihf/: README.md  package.json
@napi/benchmark/npm/linux-arm64-gnu/: README.md  package.json
@napi/benchmark/npm/linux-arm64-musl/: README.md  package.json
@napi/benchmark/npm/linux-x64-gnu/: README.md  package.json
@napi/benchmark/npm/linux-x64-musl/: README.md  package.json
@napi/benchmark/npm/win32-arm64-msvc/: README.md  package.json
@napi/benchmark/npm/win32-ia32-msvc/: README.md  package.json
@napi/benchmark/npm/win32-x64-msvc/: README.md  package.json
@napi/benchmark/src/: lib.rs
src/: arraySum.bench.mjs  arraySum.mjs  base64Encode.bench.mjs  base64Encode.mjs  fastUri.bench.mjs  fastUri.mjs  fibonacci.bench.mjs  fibonacci.mjs  index.mjs  jsonStringify.bench.mjs  jsonStringify.mjs  jwt.bench.mjs  jwt.mjs  noop.bench.mjs  resultComparator.mjs
wasm-pack/: Cargo.toml
wasm-pack/src/: lib.rs
