[package]
edition = "2021"
name = "benchmark"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.13", default-features = false, features = ["napi4"] }
napi-derive = "2.16.12"
serde_json = "*"
url = "2.5.3"

[build-dependencies]
napi-build = "2.1.3"

[profile.release]
lto = true
